# cp-test-public

./: Dockerfile  Dockerfile_ARG  Dockerfile_complex  Dockerfile_cr  Dockerfile文件123.@.q_-1  README.md  aaa  asdasdasd  ayrgyjiyrja  character.sh  cp-test  dafaf  daimatijiao  daimatijiao1  daimayuan eqdew1  deck  dfsfsdfsfs  dsafghfdsa  fdsfsdfs  ffdaf  gadfgdfa  go.mod  he53yueth  jytk  keuket  kubectlCRD.yaml  kubectl_image_环境变量  main_test.go  namespace_secret_deployment.yaml  namespace_service_sts_pvc_sc.yaml  newtest_w  oauthtoken.py  print2.py  print3.py  siyiouyun测试  test.yaml  uououop  vulnerability.py  说明.txt
golang/: Dockerfile  go.sum  main.go  monitor.yaml
golang_error/: Dockerfile  Makefile  main.go
gradle-java-11/: build.gradle
gradle-java-17/: README.md  build.gradle
gradle-java-8/: build.gradle
java-test/: .env  Dockerfile3  Dockerfile4  README.md  pom.xml  settings.xml
java-test/app-configs/chart/: values2.yaml
java-test/app-configs/manifest-app/: ingress.yaml  service.yaml
java-test/app-configs/manifests/: app-sts.yaml  (+1 more)
java-test/app-configs/manifests-new/: svc.yaml
kubectl/: key1+key2.yaml  keys.yaml  namespace.yaml
log/: color.sh  color.sh.sh
maven/demo1/: pom.xml
mvndemosimple/: Dockerfile  Readme.md  pom.xml
python-unittest/: example.py  test_xxx.py
ugly中文.wu_--1/: Dockerfile文件123.@.q_-1
unittest/bench/: success_test.go  unit.go
unittest/none/: none_test.go  unit.go
unittest/success/: success_test.go
webhook/: Cargo.toml  Dockerfile  bootstrap.sh  build.sh
webhook-test/: sthnew
webhook/.cargo/: config
(+192 files in other folders)
