[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = [
    "dongwei.devin <dongwei.devin@bytedance.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
